# petsitting_apointment

./: .gitignore
backend/: pyproject.toml
petsitting_landing/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
petsitting_landing/src/: App.vue  tema-light-dark.html
petsitting_landing/src/components/: ConfirmacionView.vue  DatosClienteView.vue  LandingView.vue  ReservasView.vue
petsitting_landing/src/stores/: theme.js
