[tool.poetry]
name = "petsitting-backend"
version = "0.1.0"
description = ""
authors = ["Eduardo Bachmann <eduardo.bachmann.f@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
